--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,8 @@
         5【云相册】不只是更加人性化的智能管理，也是绝对安全的个人照片保险柜；\n
         6【照片编辑】倾力打造全新编辑模块，特效叠加、裁剪旋转、细节调整、纹理、虚化随心改变。
     </string>
+    
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
