创建App启动界面

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">开发框架</string>
     
+    <!-- confirm_dialog.xml -->
     <string name="software_update">软件更新</string>
     <string name="update_features">
         1. 【近场传输】0流量也能传照片？是！真！的！\n
@@ -12,8 +13,10 @@
         5【云相册】不只是更加人性化的智能管理，也是绝对安全的个人照片保险柜；\n
         6【照片编辑】倾力打造全新编辑模块，特效叠加、裁剪旋转、细节调整、纹理、虚化随心改变。
     </string>
-    
     <string name="ok">好</string>
     <string name="cancel">不好</string>
+    
+     <!-- splash.xml -->
+    <string name="image_content">图片</string>
     
 </resources>
