0003 2014/11/10       1、使用ViewPager实现简单新特性介绍       2、新增Back两次退出程序功能       3、将启动画面和新特性介绍合并到一个Acitvity（Splash）中

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -19,4 +19,7 @@
      <!-- splash.xml -->
     <string name="image_content">图片</string>
     
+    <!-- BaseActivity.java -->
+    <string name="back_twice_to_exit">再按一次，退出程序</string>
+    
 </resources>
