#0004 2014/11/10       1、新增屏蔽Back功能       2、完善新特性介绍部分功能

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -22,4 +22,13 @@
     <!-- BaseActivity.java -->
     <string name="back_twice_to_exit">再按一次，退出程序</string>
     
+    <!-- feature_1.xml -->
+    <string name="feature_demo_1">Demo 1</string>
+    
+    <!-- feature_2.xml -->
+    <string name="feature_demo_2">Demo 2</string>
+    
+    <!-- feature_3.xml -->
+    <string name="feature_demo_3">Demo 3</string>
+    
 </resources>
